Buck Young | BCY3@pitt.edu Created bold class for section labels in the Basics div Created buttons for the section headers Box-shadows for everyone!

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <div id="basics">
       <table>
         <tr>
-          <td>Lecture:</td>
+          <td class="bold">Lecture:</td>
           <td>T H 9:30-10:45AM @ SENSQ 5129</td>
         </tr>
         <tr>
-          <td>Instructor:</td>
+          <td class="bold">Instructor:</td>
           <td>
             Nicholas Farnan (nlf4 [at] pitt.edu)
             <br />
@@ -38,14 +38,14 @@
           </td>
         </tr>
         <tr>
-          <td>Recitations:</td>
+          <td class="bold">Recitations:</td>
           <td>M 10-10:50AM @ SENSQ 5505
               <br />
               M 2-2:50PM @ SENSQ 5505
           </td>
         </tr>
         <tr>
-          <td>TA:</td>
+          <td class="bold">TA:</td>
           <td>
             Nils Murrugarra Llerena (nineil.cs [at] gmail.com)
             <br />
@@ -62,7 +62,7 @@
       <table>
         <tr>
           <td id="announcementstoggle">+</td>
-          <td>Announcements</td>
+          <td class="section-heading">Announcements</td>
         </tr>
       </table>
     </div>
@@ -117,7 +117,7 @@
       <table>
         <tr>
           <td id="scheduletoggle">+</td>
-          <td>Schedule</td>
+          <td class="section-heading">Schedule</td>
         </tr>
       </table>
     </div>
@@ -430,7 +430,7 @@
       <table>
         <tr>
           <td id="assignmentstoggle">+</td>
-          <td>Assignments</td>
+          <td class="section-heading">Assignments</td>
         </tr>
       </table>
     </div>
@@ -457,7 +457,7 @@
       <table>
         <tr>
           <td id="policiestoggle">+</td>
-          <td>Course Information and Policies</td>
+          <td class="section-heading">Course Information and Policies</td>
         </tr>
       </table>
     </div>
@@ -540,7 +540,7 @@
       <table>
         <tr>
           <td id="othertoggle">+</td>
-          <td>Other Relevant Links</td>
+          <td class="section-heading">Other Relevant Links</td>
         </tr>
       </table>
     </div>
